<resources>
    <string name="app_name">Handy</string>
    <string name="index_finger_length_cm">Index Finger Length (cm)</string>
    <string name="middle_finger_length_cm">Middle Finger Length (cm)</string>
    <string name="ring_finger_length_cm">Ring Finger Length (cm)</string>
    <string name="pinky_finger_length_cm">Pinky Finger Length (cm)</string>
    <string name="forearm_length_elbow_to_wrist_cm">Forearm Length (elbow to wrist) (cm)</string>
    <string name="save_measurements">Save Measurements</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result:</string>
    <string name="edit_measurements">Edit Measurements</string>
    <string name="personal_measurement_converter">Personal Measurement Converter</string>
    <string name="measurement_type">Measurement Type:</string>
    <string name="finger_type">finger_type\n</string>
    <string name="number_of_measurements">Number of Measurements:</string>
    <string name="measurement_example">"Ex: 2.5"\n</string>
</resources>